26.1.2 Port from 1.21.11